--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     <p>manyahin.ru (c) 2010 - 2016 </p>
                 </div>
                 <div class="col-4 col-md-6 footer_right">
-                    <p class="scrollup"><a href="#header" class="scrollup">go to top</a></p>
+                    <p><a href="#" class="scrollup">go to top</a></p>
                 </div>
             </div>
         </div>
